; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_dev.c_nsmb_dev_load.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_dev.c_nsmb_dev_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@smb_lock = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"samba device lock\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @nsmb_dev_load to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nsmb_dev_load(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %36 [
    i32 129, label %9
    i32 128, label %27
  ]

9:                                                ; preds = %3
  %10 = call i32 (...) @smb_sm_init()
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  br label %38

14:                                               ; preds = %9
  %15 = call i32 (...) @smb_iod_init()
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = call i32 (...) @smb_sm_done()
  br label %38

20:                                               ; preds = %14
  %21 = call i32 (...) @nsmb_dev_init()
  store i32 %21, i32* %7, align 4
  %22 = load i32, i32* %7, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %20
  br label %38

25:                                               ; preds = %20
  %26 = call i32 @sx_init(i32* @smb_lock, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  br label %38

27:                                               ; preds = %3
  %28 = call i32 (...) @smb_iod_done()
  %29 = call i32 (...) @smb_sm_done()
  store i32 %29, i32* %7, align 4
  %30 = load i32, i32* %7, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %27
  br label %38

33:                                               ; preds = %27
  %34 = call i32 (...) @nsmb_dev_destroy()
  %35 = call i32 @sx_destroy(i32* @smb_lock)
  br label %38

36:                                               ; preds = %3
  %37 = load i32, i32* @EINVAL, align 4
  store i32 %37, i32* %7, align 4
  br label %38

38:                                               ; preds = %36, %33, %32, %25, %24, %18, %13
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}

declare dso_local i32 @smb_sm_init(...) #1

declare dso_local i32 @smb_iod_init(...) #1

declare dso_local i32 @smb_sm_done(...) #1

declare dso_local i32 @nsmb_dev_init(...) #1

declare dso_local i32 @sx_init(i32*, i8*) #1

declare dso_local i32 @smb_iod_done(...) #1

declare dso_local i32 @nsmb_dev_destroy(...) #1

declare dso_local i32 @sx_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
